--- a/src/app/form.component.html
+++ b/src/app/form.component.html
@@ -1,9 +1,9 @@
 <div class="ui raised segment">
     <h2 class="ui header">Demo Form with Builder</h2>
 
-	<form #f="ngForm" (ngSubmit)="onSubmit()">
+	<form>
         <input type="text" id="value1">
-        <button type="submit" class="ui button">Submit</button>
+        <button type="submit">Submit</button>
     </form>        
     <!--
     <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm.value)" class="ui form">
