--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<p>{{title}}</p>
+<p>{{title}}</p>&nbsp;&nbsp;
+<!--
+<a routerLink="/home">HOME</a>
+&nbsp;
+-->
 <a routerLink="/form">FORM</a>
 <router-outlet></router-outlet>
 
