--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="appBox">
-<p>{{title}}</p>&nbsp;&nbsp;
-<a routerLink="/form">FORM</a>
-<router-outlet></router-outlet>
+<form-demo></form-demo>
 </div>
 
